# Project_ILCC

./: README.md
core/: SysMonCore.cpp  SysMonCore.hpp
core/qtInterface/: CMakeLists.txt  SysMonCore.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtcsettings.cmake
release/: ULSM_x86  install_dependencies_ULSM.sh
sourceCode/: main.cpp
